# haze

./: .gitignore  .vimrc  .vimspector.json  CMakeLists.txt  README.md  main.cpp
bench/: CMakeLists.txt  gbench_haze.cpp  gbench_haze.hpp
examples/: CMakeLists.txt  demo.cxx  demo_old.cxx  gpu.cxx
include/: CMakeLists.txt  HAZElib.hpp  image.hpp  img_manip.hpp  img_transform.hpp  perlin.hpp  stb_util.hpp  steganography.hpp  util.hpp
include/cli/: cli.hpp
include/gpu/: CMakeLists.txt  gpu_ops.hpp
include/gpu/metal/: CMakeLists.txt  Metal.hpp  metal_ops.hpp  ops.metal
include/haze/app/: app.hxx  app_base.hxx  window.hxx  window_base.hxx
include/haze/common/: range.hxx  time.hxx  types.hxx
include/haze/core/common/: config.hxx  log.hxx  time.hxx  types.hxx
include/haze/core/geometry/: circle.hxx  column_iterator.hxx  line.hxx  meta.hxx  point.hxx  rectangle.hxx  row_iterator.hxx  solver.hxx  triangle.hxx
include/haze/core/object/: image.hxx  image_io.hxx  iterator.hxx  meta.hxx  object_view.hxx  pixel.hxx  shape.hxx
include/haze/cpugfx/draw/: blender.hxx  fill.hxx  interpolator.hxx  meta.hxx
include/haze/cpugfx/scene/: layer.hxx  meta.hxx
include/haze/draw/: blender.hxx  fill.hxx  interpolator.hxx  line.hxx  meta.hxx
include/haze/filter/: downscale.hxx  invert.hxx  mean_blur.hxx  sort.hxx  transform.hxx
include/haze/geo/: circle.hxx  line.hxx  meta.hxx  point.hxx  rectangle.hxx  shape.hxx
include/haze/geometry/: circle.hxx  column_iterator.hxx  line.hxx  meta.hxx  point.hxx  rectangle.hxx  row_iterator.hxx  solver.hxx  triangle.hxx
include/haze/gfx/: allocator.hxx  allocator_base.hxx  buffer.hxx  buffer_base.hxx  common.hxx  context.hxx  context_base.hxx  index_buffer.hxx  renderer.hxx  renderer_api.hxx  renderer_api_base.hxx  renderer_base.hxx  shader.hxx  shader_base.hxx  texture.hxx  texture_base.hxx  vertex_array.hxx  vertex_array_base.hxx  vertex_buffer.hxx
include/haze/gfx/backend/metal/: allocator.hxx  app.hxx  app_manual.hxx  basic_renderer.hxx  buffer.hxx  common.hxx  compat.hxx  context.hxx  renderer.hxx  renderer_api.hxx  shader.hxx  texture.hxx  vertex_array.hxx  window.hxx
include/haze/gfx/backend/metal/shaders/: basic_triangle.metal  basic_triangle_source.hxx  common.h  common.metal  multi_triangle_source.hxx  rotating_triangle_source.hxx
include/haze/image/: convert.hxx  image.hxx  image_iterator.hxx  image_view.hxx  integral_image.hxx  io.hxx  iterator.hxx  meta.hxx  pixel.hxx  shape.hxx
include/haze/object/: image.hxx  image_io.hxx  iterator.hxx  meta.hxx  object_view.hxx  pixel.hxx  shape.hxx
include/haze/render/: basic_animator.hxx  draw.hxx  interpolator.hxx  line_animator.hxx  meta.hxx  parallel_animator.hxx  sequential_animator.hxx
include/haze/scene/: group.hxx  layer.hxx  meta.hxx
lib/: ops.air  ops.metallib
source/: CMakeLists.txt  demo.cxx
source/haze/: haze.cxx
source/haze/gfx/backend/metal/: allocator.cxx  app.cxx  common.cxx  glfw_adapter.hxx  glfw_adapter.mm  renderer_api.cxx  vertex_array.cxx
test/: CMakeLists.txt  gtest_haze.cpp  gtest_haze.hpp
